Fixed some spacing with instance table on assemblies runtime page.

--- a/css/apps.less
+++ b/css/apps.less
@@ -94,12 +94,10 @@
         width:32px;
         height:32px;
     }
-    img.chef_icon{
+    img{
         height: 22px;
-        float:right;
-    }
-    img.puppet_icon{
-        height: 22px;
+        min-width: 22px;
+        margin-left:2px;
         float:right;
     }
 }
